[FIX] web, *: fix buttons squashing and spacing *: calendar, google_calendar, microsoft_calendar;
task-3410165
part of task-3326263

--- a/addons/google_calendar/static/src/scss/google_calendar.scss
+++ b/addons/google_calendar/static/src/scss/google_calendar.scss
@@ -1,17 +1,10 @@
-.o_calendar_sidebar {
-    .o_google_sync_button_configured {
-        color: white;
-        height: 2em;
+.o_calendar_sidebar .o_google_sync_button_configured {
 
-        &:hover {
-            #google_check {
-                display: none;
-            }
-        }
-        &:not(:hover) {
-            #google_stop {
-                display: none;
-            }
-        }
+    &:hover #google_check {
+        display: none;
+    }
+
+    &:not(:hover) #google_stop {
+        display: none;
     }
 }
